bootstrap/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: minio
            port: 
              name: console
  tls:
  - hosts:
    - localhost
    secretName: tls.localhost
